--- a/config/crossplane/crossplane-app.yaml
+++ b/config/crossplane/crossplane-app.yaml
@@ -1,3 +1,12 @@
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: crossplane-system 
+spec:
+  finalizers:
+  - kubernetes 
+---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
