--- a/config/crossplane/crossplane-app.yaml
+++ b/config/crossplane/crossplane-app.yaml
@@ -25,6 +25,11 @@ spec:
     automated:
       prune: true
       selfHeal: true
+  ignoreDifferences:
+    - group: argoproj.io
+      jsonPointers:
+        - /status
+      kind: Application
 status:
   health: {}
   summary: {}
