Add back the missing namespace

--- a/config/capabilities/managed-resources/logging/kibana.yaml
+++ b/config/capabilities/managed-resources/logging/kibana.yaml
@@ -16,6 +16,7 @@ spec:
       kind: Kibana
       metadata:
         name: my-logging-stack
+        namespace: default
       spec:
         version: 7.13.3
         elasticsearchRef:
