--- a/environments/base/logging-claim.yaml
+++ b/environments/base/logging-claim.yaml
@@ -2,10 +2,9 @@ apiVersion: capabilities.morningspace.io/v1alpha1
 kind: LoggingClaim
 metadata:
   annotations:
-    # capabilities.morningspace.io/operator-namespace: operators
     capabilities.morningspace.io/provider-config: kubernetes-provider
-  name: my-logging-stack-dev
-  namespace: dev
+  name: my-logging-stack
+  namespace: default
 spec:
   parameters:
     esVersion: 7.13.3
