--- a/environments/base/provider-config.yaml
+++ b/environments/base/provider-config.yaml
@@ -2,7 +2,7 @@ apiVersion: kubernetes.crossplane.io/v1alpha1
 kind: ProviderConfig
 metadata:
   name: kubernetes-provider
-  namespace: dev
+  namespace: default
 spec:
   credentials:
     source: Secret
