--- a/environments/overlays/dev/logging-claim.yaml
+++ b/environments/overlays/dev/logging-claim.yaml
@@ -1,9 +1,15 @@
 apiVersion: capabilities.morningspace.io/v1alpha1
 kind: LoggingClaim
 metadata:
+  annotations:
+    capabilities.morningspace.io/provider-config: kubernetes-provider
   name: my-logging-stack
   namespace: dev
 spec:
   parameters:
     esVersion: 7.15.0
     kibanaVersion: 7.15.0
+  compositionSelector:
+    matchLabels:
+      capability: logging
+      provider: olm
