--- a/environments/dev/env/provider-config.yaml
+++ b/environments/dev/env/provider-config.yaml
@@ -1,11 +1,11 @@
 apiVersion: kubernetes.crossplane.io/v1alpha1
 kind: ProviderConfig
 metadata:
-  name: kubernetes-provider
+  name: provider-config-dev
 spec:
   credentials:
     source: Secret
     secretRef:
-      namespace: crossplane-system
+      namespace: dev
       name: cluster-config
       key: kubeconfig
