--- a/config/argocd-apps/sealed-secrets.yaml
+++ b/config/argocd-apps/sealed-secrets.yaml
@@ -4,6 +4,8 @@ kind: Application
 metadata:
   name: sealed-secrets-controller
   namespace: kube-system
+  annotations:
+    argocd.argoproj.io/sync-wave: "100"
 spec:
   destination:
     namespace: argocd
