--- a/config/argocd-apps/sealed-secrets.yaml
+++ b/config/argocd-apps/sealed-secrets.yaml
@@ -3,7 +3,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: sealed-secrets-controller
-  namespace: kube-system
+  namespace: argocd
   annotations:
     argocd.argoproj.io/sync-wave: "100"
 spec:
