--- a/config/shared/sealed-secrets.yaml
+++ b/config/shared/sealed-secrets.yaml
@@ -15,6 +15,11 @@ spec:
     repoURL: https://bitnami-labs.github.io/sealed-secrets
     targetRevision: 1.16.1
     chart: sealed-secrets
+    helm:
+      values: |-
+        # https://github.com/argoproj/argo-cd/issues/5991
+        commandArgs:
+          - "--update-status"
   syncPolicy:
     automated:
       prune: true
