--- a/config/capabilities/crossplane-helm/logging/templates/post-install-check.yaml
+++ b/config/capabilities/crossplane-helm/logging/templates/post-install-check.yaml
@@ -19,25 +19,26 @@ spec:
               set -x
 
               current_seconds=0
-              limit_seconds=$(( $(date +%s) + 2400 ))
-              csv_installing=0
+              limit_seconds=$(( $SECONDS + 600 ))
+              installing=0
 
               while [ ${current_seconds} -lt ${limit_seconds} ]; do
-                if [ $(kubectl get csv -n " {{.Values.metadata.namespace}}" --no-headers | grep -vc Succeeded) -gt 0 ]; then
-                  csv_installing=1
-                  echo "INFO: CSVs still installing."
+                if [ $(kubectl get csv -n "{{.Values.metadata.namespace}}" -o name | grep -c clusterserviceversion) -eq 0 ||
+                     $(kubectl get csv -n "{{.Values.metadata.namespace}}" --no-headers | grep -vc Succeeded) -gt 0 ]; then
+                  installing=1
+                  echo "INFO: ClusterServiceVersion resources still installing."
                   sleep 60
                 else
-                  csv_installing=0
+                  installing=0
                   break
                 fi
-                current_seconds=$(( $(date +%s) ))
+                current_seconds=$SECONDS
               done
 
-              if [ ${csv_installing} -eq 0 ]; then
-                echo "INFO: All CSVs are ready."
+              if [ ${installing} -eq 0 ]; then
+                echo "INFO: All ClusterServiceVersion resources are ready."
               else
-                echo "ERROR: CSVs still not ready."
+                echo "ERROR: ClusterServiceVersion resources still not ready."
                 exit 1
               fi
       restartPolicy: Never
