--- a/config/shared/argocd/argocd-cm.yaml
+++ b/config/shared/argocd/argocd-cm.yaml
@@ -8,6 +8,15 @@ metadata:
     app.kubernetes.io/name: argocd-cm
     app.kubernetes.io/part-of: argocd
 data:
+  resource.customizations.health.operators.coreos.com_Subscription: |
+    hs = {}
+    hs.status = "Progressing"
+    hs.message = ""
+    if obj.status ~= nil then
+      hs.status = "Healthy"
+      hs.message = obj.status.state
+    end
+    return hs
   resource.customizations.health.operators.coreos.com_ClusterServiceVersion: |
     hs = {}
     hs.status = "Progressing"
@@ -44,13 +53,14 @@ data:
   resource.customizations.health.kubernetes.crossplane.io_Object: |
     hs = {}
     hs.status = "Progressing"
-    hs.message = ""
+    hs.message = "..."
     if obj.status ~= nil and obj.status.atProvider ~= nil then
       kind = obj.spec.forProvider.manifest.kind
       res = obj.status.atProvider.manifest
       if res ~= nil then
         if kind == "Subscription" then
           hs.status = "Healthy"
+          hs.message = res.status.state
         elseif kind == "ClusterServiceVersion" then
           if res.status ~= nil then
             if res.status.phase == "Succeeded" then
