--- a/config/capabilities/helm/logging/templates/post-uninstall-job.yaml
+++ b/config/capabilities/helm/logging/templates/post-uninstall-job.yaml
@@ -12,8 +12,6 @@ metadata:
   annotations:
     # hooks are defined here
     "helm.sh/hook": post-delete
-    "helm.sh/hook-weight": "5"
-    "helm.sh/hook-delete-policy": hook-succeeded
 spec:
   template:
     metadata:
@@ -27,7 +25,7 @@ spec:
         - name: clean-resources
           image: quay.io/bitnami/kubectl:latest
           command:
-            - /bin/sh
+            - /bin/bash
             - -c
             - |
               set -x
