--- a/config/capabilities/helm/logging/templates/subscription.yaml
+++ b/config/capabilities/helm/logging/templates/subscription.yaml
@@ -4,6 +4,8 @@ kind: Subscription
 metadata:
   namespace: operators
   name: {{.Values.metadata.name}}
+  annotations:
+    argocd.argoproj.io/sync-wave: "100"
 spec:
   channel: stable
   name: elastic-cloud-eck
