--- a/config/capabilities/helm/logging/templates/post-uninstall-job.yaml
+++ b/config/capabilities/helm/logging/templates/post-uninstall-job.yaml
@@ -15,7 +15,7 @@ metadata:
 spec:
   template:
     metadata:
-      name: "{{ .Release.Name }}"
+      name: {{ .Release.Name }}-post-uninstall-job
       labels:
         app.kubernetes.io/managed-by: {{ .Release.Service | quote }}
         app.kubernetes.io/instance: {{ .Release.Name | quote }}
