--- a/config/shared/argocd/argocd-cm.yaml
+++ b/config/shared/argocd/argocd-cm.yaml
@@ -32,7 +32,7 @@ data:
     hs = {}
     hs.status = "Progressing"
     hs.message = ""
-    if obj.status ~= nil && obj.status.health ~= nil && obj.status.phase ~= nil then
+    if obj.status ~= nil and obj.status.health ~= nil and obj.status.phase ~= nil then
       if obj.status.health == "green" and obj.status.phase == "Ready" then
         hs.status = "Healthy"
       end
@@ -43,7 +43,7 @@ data:
     hs = {}
     hs.status = "Progressing"
     hs.message = ""
-    if obj.status ~= nil && obj.status.health ~= nil and obj.status.associationStatus ~= nil then
+    if obj.status ~= nil and obj.status.health ~= nil and obj.status.associationStatus ~= nil then
       if obj.status.health == "green" and obj.status.associationStatus == "Established" then
         hs.status = "Healthy"
       end
@@ -71,14 +71,14 @@ data:
             hs.message = res.status.message
           end
         elseif kind == "Elasticsearch" then
-          if res.status ~= nil && res.status.health ~= nil && res.status.phase ~= nil then
+          if res.status ~= nil and res.status.health ~= nil and res.status.phase ~= nil then
             if res.status.health == "green" and res.status.phase == "Ready" then
               hs.status = "Healthy"
             end
             hs.message = "health = " .. res.status.health .. " phase = " .. res.status.phase
           end
         elseif kind == "Kibana" then
-          if res.status ~= nil && res.status.health ~= nil and res.status.associationStatus ~= nil then
+          if res.status ~= nil and res.status.health ~= nil and res.status.associationStatus ~= nil then
             if res.status.health == "green" and res.status.associationStatus == "Established" then
               hs.status = "Healthy"
             end
